Saving recognized text added

--- a/Text Recogniser/Form1.resx
+++ b/Text Recogniser/Form1.resx
@@ -117,4 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYAAAD2AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AJ4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAABcAAAD/AAAAVwAAAD8AAAA/AAAAPwAAAD8AAAA/AAAAPwAA
+        AEcAAAD/AAAARwAAAAAAAAAAAAAAAAAAAAAAAAA/AAAA/wAAAAAAAABvAAAAfwAAAH8AAAB/AAAAfwAA
+        AHcAAAAAAAAA/wAAAF8AAAAAAAAAAAAAAAAAAAAAAAAAPwAAAP8AAAAAAAAAJwAAAD8AAAA/AAAAPwAA
+        AD8AAAAvAAAAAAAAAP8AAABfAAAAAAAAAAAAAAAAAAAAAAAAAD8AAAD/AAAAAAAAAG8AAAB/AAAAfwAA
+        AH8AAAB/AAAAdwAAAAAAAAD/AAAAXwAAAAAAAAAAAAAAAAAAAAAAAAA/AAAA/wAAAAAAAAAnAAAAPwAA
+        AD8AAAA/AAAAPwAAAC8AAAAAAAAA/wAAAF8AAAAAAAAAAAAAAAAAAAAAAAAAPwAAAP8AAAAAAAAAbwAA
+        AH8AAAB/AAAAfwAAAH8AAAB3AAAAAAAAAP8AAABfAAAAAAAAAAAAAAAAAAAAAAAAAD8AAAD/AAAAAAAA
+        ACcAAAA/AAAAPwAAAD8AAAA/AAAALwAAAAAAAAD/AAAAXwAAAAAAAAAAAAAAAAAAAAAAAAA/AAAA/wAA
+        AAAAAABvAAAAfwAAAH8AAAB/AAAAfwAAAHcAAAAAAAAA/wAAAF8AAAAAAAAAAAAAAAAAAAAAAAAAPwAA
+        AP8AAAAAAAAAJwAAAD8AAAA/AAAAPwAAAD8AAAAvAAAAAAAAAP8AAABfAAAAAAAAAAAAAAAAAAAAAAAA
+        AAcAAAD2AAAAngAAAH8AAAB/AAAAfwAAAH8AAAB/AAAAfwAAAI4AAAD/AAAALwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAARwAAAMYAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADWAAAAVwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAP//AADgBwAAwAMAAMgTAADIEwAAyBMAAMgTAADIEwAAyBMAAMgTAADIEwAAwAMAAOAH
+        AAD//wAA//8AAA==
+</value>
+  </data>
 </root>
